[gd_scene load_steps=3 format=3 uid="uid://bplpwpncwxjh4"]

[ext_resource type="Script" uid="uid://dpm51wtebqca4" path="res://Script/CardUI.gd" id="1_kwle2"]
[ext_resource type="Texture2D" uid="uid://dux2bf8i4324q" path="res://Asset/Characters/Charlotte/Charlotte 4 cards/card 1.jpg" id="2_qh7ip"]

[node name="CardUI" type="MarginContainer"]
custom_minimum_size = Vector2(100, 140)
offset_right = 100.0
offset_bottom = 159.0
pivot_offset = Vector2(80, 130)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_kwle2")

[node name="Visuals" type="PanelContainer" parent="."]
z_index = 20
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Visuals"]
layout_mode = 2

[node name="CardImage" type="TextureRect" parent="Visuals/VBoxContainer"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_qh7ip")
expand_mode = 5
stretch_mode = 6

[node name="PlayButton" type="Button" parent="Visuals/VBoxContainer"]
z_index = 10
layout_mode = 2

[node name="DescriptionPanel" type="Panel" parent="Visuals"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Visuals/DescriptionPanel"]
layout_mode = 0
offset_top = 28.0
offset_right = 97.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 12
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="Visuals/DescriptionPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_bottom = 27.0
grow_horizontal = 0
